# media-modules

./: BUILD.bazel  Makefile  Media.mk  VERSION  version.txt  version_control.sh
drivers/: Makefile
drivers/amvdec_ports/: Makefile  aml_buf_core.c  aml_buf_core.h  aml_buf_mgr.c  aml_buf_mgr.h  aml_task_chain.c  aml_task_chain.h  aml_vcodec_adapt.c  aml_vcodec_adapt.h  aml_vcodec_dec.c  aml_vcodec_dec.h  aml_vcodec_dec_drv.c  aml_vcodec_dec_infoserver.c  aml_vcodec_drv.h  aml_vcodec_ge2d.c  aml_vcodec_ge2d.h  aml_vcodec_ts.c  aml_vcodec_util.c  aml_vcodec_util.h  aml_vcodec_vpp.c  aml_vcodec_vpp.h  vdec_drv_base.h  vdec_drv_if.c  vdec_drv_if.h
drivers/amvdec_ports/decoder/: vdec_av1_if.c  vdec_avs2_if.c  vdec_avs3_if.c  vdec_avs_if.c  vdec_h264_if.c  vdec_hevc_if.c  vdec_mjpeg_if.c  vdec_mpeg12_if.c  vdec_mpeg4_if.c  vdec_vc1_if.c  vdec_vp9_if.c
drivers/amvdec_ports/utils/: aml_dec_trace.c  common.c  common.h
drivers/common/chips/: chips.c  decoder_cpu_ver_info.c  decoder_cpu_ver_info.h
drivers/common/firmware/: Makefile  firmware.h  firmware_drv.c  firmware_type.c  firmware_type.h
drivers/common/media_clock/: Makefile
drivers/common/media_clock/clk/: clk.c  clk.h  clk_priv.h  clkg12.c
drivers/common/media_clock/switch/: amports_gate.c
drivers/common/media_utils/: vendor_hooks.c  vendor_hooks.h
drivers/common/register/: register.c  register.h
drivers/frame_provider/: Makefile
drivers/frame_provider/decoder/: Makefile
drivers/frame_provider/decoder/avs2/: Makefile  avs2_bufmgr.c  avs2_global.h  vavs2.c
drivers/frame_provider/decoder/avs2_fb/: avs2_bufmgr.c  avs2_fb_hw.c  avs2_global.h  vavs2_fb.c
drivers/frame_provider/decoder/avs3/: avs3_bufmgr.c  avs3_fb_hw.c  avs3_global.h  com_def.h  com_picman.c  dec_eco.c  vavs3.c
drivers/frame_provider/decoder/avs_multi/: Makefile  avs_multi.c
drivers/frame_provider/decoder/h264/: vh264.c
drivers/frame_provider/decoder/h264_multi/: Makefile  h264_dpb.c  h264_dpb.h  vmh264.c
drivers/frame_provider/decoder/h264_mvc/: Makefile  vh264_mvc.c
drivers/frame_provider/decoder/h265/: Makefile  vh265.c
drivers/frame_provider/decoder/h265_fb/: h265_fb_hw.c  vh265_fb.c
drivers/frame_provider/decoder/mjpeg/: Makefile  vmjpeg_multi.c
drivers/frame_provider/decoder/mpeg12/: Makefile  vmpeg12.c  vmpeg12_multi.c
drivers/frame_provider/decoder/mpeg4/: Makefile  vmpeg4_multi.c
drivers/frame_provider/decoder/utils/: Makefile  aml_buf_helper.h  amstream_profile.c  amvdec.c  firmware.h  (+18 more)
drivers/frame_provider/decoder_v4l/: Makefile
drivers/frame_sink/encoder/: Makefile
drivers/framerate_adapter/: Makefile  video_framerate_adapter.c
drivers/include/regs/: dos_registers.h
drivers/media_proxy/: media_proxy.c  media_proxy.h  media_proxy.md
drivers/media_sync/av_sync/: Makefile  media_sync_core.c  media_sync_core.h  media_sync_dev.c  media_sync_dev.h  media_sync_policy.c  media_sync_policy.h  media_sync_vfm.c  media_sync_vfm.h
drivers/media_sync/pts_server/: Makefile  pts_server_core.c  pts_server_core.h  pts_server_dev.c  pts_server_dev.h
drivers/stream_input/: Makefile
drivers/stream_input/amports/: adec.c  amports_priv.h  amstream.c  stream_buffer_base.c  stream_buffer_interface.c  streambuf.c  streambuf.h  thread_rw.c
drivers/stream_input/parser/: esparser.c  psparser.c  rmparser.c  tsdemux.c  tsdemux.h
(+80 files in other folders)
