load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "media",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            "**/*.mk",
            "**/*.bp",
        ],
    ),
    outs = [
        "amvdec_ports/amvdec_ports.ko",
        "common/firmware/firmware.ko",
        "common/media_clock/media_clock.ko",
        "frame_provider/decoder/avs2/amvdec_avs2.ko",
        "frame_provider/decoder/avs2_fb/amvdec_avs2_fb.ko",
        "frame_provider/decoder/avs3/amvdec_avs3.ko",
        "frame_provider/decoder/avs_multi/amvdec_mavs.ko",
        "frame_provider/decoder/h264_multi/amvdec_mh264.ko",
        "frame_provider/decoder/h264_mvc/amvdec_h264mvc.ko",
        "frame_provider/decoder/h265/amvdec_h265.ko",
        "frame_provider/decoder/h265_fb/amvdec_h265_fb.ko",
        "frame_provider/decoder/mjpeg/amvdec_mmjpeg.ko",
        "frame_provider/decoder/mpeg12/amvdec_mmpeg12.ko",
        "frame_provider/decoder/mpeg4/amvdec_mmpeg4.ko",
        "frame_provider/decoder/utils/amvdec_debug_port.ko",
        "frame_provider/decoder/utils/decoder_common.ko",
        "frame_provider/decoder_v4l/avs2/amvdec_avs2_v4l.ko",
        "frame_provider/decoder_v4l/avs2_fb/amvdec_avs2_fb_v4l.ko",
        "frame_provider/decoder_v4l/avs3/amvdec_avs3_v4l.ko",
        "frame_provider/decoder_v4l/avs_multi/amvdec_mavs_v4l.ko",
        "frame_provider/decoder_v4l/h264_multi/amvdec_mh264_v4l.ko",
        "frame_provider/decoder_v4l/h265/amvdec_h265_v4l.ko",
        "frame_provider/decoder_v4l/h265_fb/amvdec_h265_fb_v4l.ko",
        "frame_provider/decoder_v4l/mjpeg/amvdec_mmjpeg_v4l.ko",
        "frame_provider/decoder_v4l/mpeg12/amvdec_mmpeg12_v4l.ko",
        "frame_provider/decoder_v4l/mpeg4/amvdec_mmpeg4_v4l.ko",
        "frame_provider/decoder_v4l/vav1/amvdec_av1_v4l.ko",
        "frame_provider/decoder_v4l/vav1_fb/amvdec_av1_fb_v4l.ko",
        "frame_provider/decoder_v4l/vav1_t5d/amvdec_av1_t5d_v4l.ko",
        "frame_provider/decoder_v4l/vp9/amvdec_vp9_v4l.ko",
        "frame_provider/decoder_v4l/vp9_fb/amvdec_vp9_fb_v4l.ko",
        "frame_provider/decoder/vav1/amvdec_av1.ko",
        "frame_provider/decoder/vav1_fb/amvdec_av1_fb.ko",
        "frame_provider/decoder/vc1/amvdec_vc1.ko",
	"frame_provider/decoder_v4l/vc1/amvdec_vc1_v4l.ko",
        "frame_provider/decoder/vp9/amvdec_vp9.ko",
        "frame_provider/decoder/vp9_fb/amvdec_vp9_fb.ko",
        "framerate_adapter/video_framerate_adapter.ko",
        "frame_sink/encoder/common/encoder_common.ko",
        "frame_sink/encoder/h264/amlogic-encoder.ko",
        "frame_sink/encoder/h265/amlogic-vpu.ko",
        "frame_sink/encoder/jpeg/amlogic-jpegenc.ko",
        "frame_sink/encoder/memalloc/amlogic-memalloc.ko",
        "frame_sink/encoder/multi/amlogic-multienc.ko",
        "frame_sink/encoder/vcenc/amlogic-vc8000.ko",
        "media_proxy/media_proxy.ko",
        "media_sync/av_sync/media_sync.ko",
        "media_sync/pts_server/pts_server.ko",
        "stream_input/parser/hw_demux/aml_hardware_dmx.ko",
        "stream_input/stream_input.ko",
    ],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
